# flake8-kwargs-spaces

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  flake8_kwargs_spaces.py  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: github-action.yml  publish-pypi.yml  release-on-merge.yml
cloud-foundation/phase-a/: README.md  inventory.md
cloud-foundation/phase-a/scripts/: collect_inventory.sh  harden_baseline.sh  install_tailscale.sh  setup_node_a_storage.sh  setup_reliability.sh  validate_base_node.sh  validate_from_laptop.sh  validate_hardening.sh  validate_reliability.sh  validate_storage.sh  validate_tailscale.sh
scripts/: build.sh  install.sh  linux_install.sh  test.sh  windows_install.bat
tests/: examples.py  flake8_kwargs_spaces_test.py
wheels/: flake8_kwargs_spaces-0.1.0-py3-none-any.whl  pycodestyle-2.11.0-py2.py3-none-any.whl
