[metadata]
name = flake8-kwargs-spaces
version = 0.1.2
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
py_modules = flake8_kwargs_spaces
install_requires = 
    flake8>=3.7
    importlib-metadata>=0.9;python_version<"3.8"

[options.entry_points]
flake8.extension = 
    EKS=flake8_kwargs_spaces:Plugin

[flake8]
ignore = E251
# irrelevant
extend-ignore = E251,E722,W503
max-line-length = 132
