[metadata]
name = flake8-kwargs-spaces
version = 0.1.7
description = Flake8 plugin enforcing kwargs spacing rules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sahargavriely/flake8-kwargs-spaces
project_urls =
    Source = https://github.com/sahargavriely/flake8-kwargs-spaces
    Issues = https://github.com/sahargavriely/flake8-kwargs-spaces/issues
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License

[options]
py_modules = flake8_kwargs_spaces
python_requires = >=3.8
install_requires = 
    flake8>=3.7
    importlib-metadata>=0.9;python_version<"3.8"

[options.entry_points]
flake8.extension =
    EKS=flake8_kwargs_spaces:Plugin

[flake8]
ignore = E251
# irrelevant
extend-ignore = E251,E722,W503
max-line-length = 132
